Made corrections based on Danny's comments
- Added logo above introduction text
- Removed qutations
- Changed "Meet the Team" to "Meet the Board"
- Added ISL logo to footer
- Got rid of continent image at footer
- Removed white space above meet the team
- Fixed some typos
- Made dumpling night photo appear first

--- a/css/style.css
+++ b/css/style.css
@@ -1526,7 +1526,7 @@ img.author-box-image {
 }
 
 .about-us-widget {
-    background-image: url(../images/world-map.png);
+
     background-size: contain;
 }
 
